<resources>
    <string name="app_name">HeroesFight</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectCellToMove">Select the cell you want to move</string>
    <string name="selectEnemyToAttack">Select the enemy you want to attack</string>
    <string name="selectOwnHero">Select your own hero to confirm</string>
    <string name="selectAllyToSupport">Select the ally you want to support</string>
    <string name="selectEnemyToSabotage">Select the enemy you want to sabotage</string>
    <string name="choiceAction">Choice your action</string>
    <string name="sabotagedTurn">%1$s\'s turn, but was sabotaged</string>
    <string name="newTurn">%1$s\'s turn</string>
    <string name="selectEnemyToShot">Select the enemy you want to shot</string>
    <string name="pass">Pass</string>
    <string name="mov">Mov</string>
    <string name="atck">Atck!</string>
    <string name="def">Def</string>
    <string name="sup">Sup</string>
    <string name="sab">Sab</string>
    <string name="shot">Shot</string>
    <string name="appearance">Appearance</string>
    <string name="eye_color">Eye color</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair color</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="weight">Weight</string>
    <string name="aliases">Aliases</string>
    <string name="alter_ego">Alter ego</string>
    <string name="biography">Biography</string>
    <string name="first_appearance">First appearance</string>
    <string name="full_name">Full name</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="publisher">Publisher</string>
    <string name="_2p_same_device">2P same device</string>
    <string name="_2p_tcp_ip">2P TCP/IP</string>
    <string name="_2p_wifi_direct">2P Wifi direct</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="genera_otra_carta_aleatoria">Genera otra carta aleatoria</string>
    <string name="combat_bonus">Combat Bonus</string>
    <string name="defense_bonus">Defense Bonus</string>
    <string name="com">Com:</string>
    <string name="dur">Dur:</string>
    <string name="pow">Pow:</string>
    <string name="sabotaged">SABOTAGED</string>
    <string name="spd">Spd:</string>
    <string name="stats">STATS</string>
    <string name="str">Str:</string>
    <string name="intelligence">Int:</string>
    <string name="def_atks">Def Atks</string>
    <string name="dodged_atks">Dodged atks</string>
    <string name="kills">Kills</string>
    <string name="melee_atks">Melee Atks</string>
    <string name="melee_dmg">Melee Dmg</string>
    <string name="melee_dmg_rec">Melee Dmg Rec</string>
    <string name="range_atks">Range Atks</string>
    <string name="range_dmg">Range Dmg</string>
    <string name="range_dmg_rec">Range dmg Rec</string>
    <string name="survived">Survived</string>
    <string name="you_won">You won!</string>
    <string name="enemy_won">Enemy won!</string>
    <string name="yor_stats">Yor stats:</string>
    <string name="villains_won">Villains won</string>
    <string name="heroes_won">Heroes won</string>
    <string name="loading">Loading...</string>
    <string name="the_first_time_it_may_take_several_minutes">The first time it may take several minutes</string>
    <string name="connection_choice">Connection choice</string>
    <string name="select_an_option">Select an option</string>
    <string name="be_the_host">Be the host</string>
    <string name="connect_to_other_device">Connect to other device</string>
    <string name="insert_ip_address">Insert IP Address</string>
    <string name="connect">Connect</string>
</resources>