<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="@dimen/cardWidth"
    android:layout_height="@dimen/cardHeight"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_card_bad">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCenterVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvId"
            style="@style/txtBoldWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginCommon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="#001" />

        <ImageView
            android:id="@+id/imgHero"
            android:layout_width="@dimen/imgHeroInsideCard"
            android:layout_height="@dimen/imgHeroInsideCard"
            android:layout_marginTop="@dimen/marginMin"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvId"
            tools:src="@drawable/fight" />


        <TextView
            android:id="@+id/tvName"
            style="@style/txtBoldWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginMin"
            app:layout_constraintEnd_toEndOf="@id/imgHero"
            app:layout_constraintStart_toStartOf="@id/imgHero"
            app:layout_constraintTop_toBottomOf="@id/imgHero"
            tools:text="MANOLO MANOLERO" />

        <View
            android:id="@+id/vCardStats"
            android:layout_width="@dimen/cardStatsWidth"
            android:layout_height="@dimen/cardStatsHeight"
            android:layout_marginTop="@dimen/marginLarge"
            android:background="@drawable/background_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvStats"
            style="@style/txtBoldBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginCommon"
            android:text="@string/stats"
            app:layout_constraintEnd_toEndOf="@id/vCardStats"
            app:layout_constraintStart_toStartOf="@id/vCardStats"
            app:layout_constraintTop_toTopOf="@id/vCardStats" />

        <TextView
            android:id="@+id/tvIntelligence"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginLarge"
            android:text="@string/intelligence"
            app:layout_constraintStart_toStartOf="@id/vCardStats"
            app:layout_constraintTop_toBottomOf="@id/tvStats" />

        <TextView
            android:id="@+id/tvIntelligenceContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvIntelligence"
            app:layout_constraintEnd_toEndOf="@id/glCenterVertical"
            app:layout_constraintStart_toEndOf="@id/tvIntelligence"
            app:layout_constraintTop_toTopOf="@id/tvIntelligence"
            tools:text="045" />

        <TextView
            android:id="@+id/tvSpeed"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginCommon"
            android:text="@string/spd"
            app:layout_constraintStart_toStartOf="@id/vCardStats"
            app:layout_constraintTop_toBottomOf="@id/tvIntelligence" />

        <TextView
            android:id="@+id/tvSpeedContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvSpeed"
            app:layout_constraintEnd_toEndOf="@id/glCenterVertical"
            app:layout_constraintStart_toEndOf="@id/tvSpeed"
            app:layout_constraintTop_toTopOf="@id/tvSpeed"
            tools:text="085" />

        <TextView
            android:id="@+id/tvDurability"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginCommon"
            android:text="@string/dur"
            app:layout_constraintStart_toStartOf="@id/vCardStats"
            app:layout_constraintTop_toBottomOf="@id/tvSpeed" />

        <TextView
            android:id="@+id/tvDurabilityContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvDurability"
            app:layout_constraintEnd_toEndOf="@id/glCenterVertical"
            app:layout_constraintStart_toEndOf="@id/tvDurability"
            app:layout_constraintTop_toTopOf="@id/tvDurability"
            tools:text="025" />

        <TextView
            android:id="@+id/tvStrength"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginLarge"
            android:text="@string/str"
            app:layout_constraintStart_toStartOf="@id/glCenterVertical"
            app:layout_constraintTop_toBottomOf="@id/tvStats" />

        <TextView
            android:id="@+id/tvStrengthContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvStrength"
            app:layout_constraintEnd_toEndOf="@id/vCardStats"
            app:layout_constraintStart_toEndOf="@id/tvStrength"
            app:layout_constraintTop_toTopOf="@id/tvStrength"
            tools:text="037" />

        <TextView
            android:id="@+id/tvPower"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginCommon"
            android:text="@string/pow"
            app:layout_constraintStart_toStartOf="@id/glCenterVertical"
            app:layout_constraintTop_toBottomOf="@id/tvStrength" />

        <TextView
            android:id="@+id/tvPowerContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvPower"
            app:layout_constraintEnd_toEndOf="@id/vCardStats"
            app:layout_constraintStart_toEndOf="@id/tvPower"
            app:layout_constraintTop_toTopOf="@id/tvPower"
            tools:text="150" />

        <TextView
            android:id="@+id/tvCombat"
            style="@style/txtStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:layout_marginTop="@dimen/marginCommon"
            android:text="@string/com"
            app:layout_constraintStart_toStartOf="@id/glCenterVertical"
            app:layout_constraintTop_toBottomOf="@id/tvPower" />

        <TextView
            android:id="@+id/tvCombatContent"
            style="@style/txtStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/tvCombat"
            app:layout_constraintEnd_toEndOf="@id/vCardStats"
            app:layout_constraintStart_toEndOf="@id/tvCombat"
            app:layout_constraintTop_toTopOf="@id/tvCombat"
            tools:text="086" />

        <Button
            android:id="@+id/btnBiography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biography"
            android:textColor="@color/txtInfoBoxesColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/vCardStats"
            app:layout_constraintTop_toBottomOf="@id/vCardStats" />

        <Button
            android:id="@+id/btnAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance"
            android:textColor="@color/txtInfoBoxesColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vCardStats"
            app:layout_constraintTop_toBottomOf="@id/vCardStats" />

        <TextView
            android:id="@+id/tvDefenseValue"
            style="@style/txtBoldWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:textSize="@dimen/txtBonusSize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvBonusDefense"
            app:layout_constraintTop_toBottomOf="@id/vCardStats"
            tools:text="+35" />

        <TextView
            android:id="@+id/tvBonusDefense"
            style="@style/txtBoldWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginCommon"
            android:singleLine="true"
            android:text="@string/defense_bonus"
            android:textSize="@dimen/txtBonusSize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/glCenterVertical"
            app:layout_constraintTop_toBottomOf="@id/vCardStats" />


        <TextView
            android:id="@+id/tvBonusValue"
            style="@style/txtBoldWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:textSize="@dimen/txtBonusSize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glCenterVertical"
            app:layout_constraintTop_toBottomOf="@id/vCardStats"
            tools:text="+35" />

        <TextView
            android:id="@+id/tvBonusCombat"
            style="@style/txtBoldWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginCommon"
            android:singleLine="true"
            android:text="@string/combat_bonus"
            android:textSize="@dimen/txtBonusSize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvBonusValue"
            app:layout_constraintTop_toBottomOf="@id/vCardStats" />

        <TextView
            android:id="@+id/tvSabotaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fighting_spirit_2_bold"
            android:rotation="-38"
            android:text="@string/sabotaged"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/imgHero"
            app:layout_constraintEnd_toEndOf="@id/imgHero"
            app:layout_constraintStart_toStartOf="@id/imgHero"
            app:layout_constraintTop_toTopOf="@id/imgHero" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>