<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appearance_fragment.AppearanceFragment">

    <ImageView
        android:id="@+id/imgHero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/marginCommon"
            android:paddingBottom="@dimen/marginLarge"
            android:background="@drawable/background_bio_and_appearance_card"
            tools:ignore="VisualLintBounds">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <TextView
                android:id="@+id/tvAppearance"
                style="@style/txtBoldWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/appearance"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintOverlap" />

            <TextView
                android:id="@+id/tvNameHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginCommon"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@id/glVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppearance" />

            <TextView
                android:id="@+id/tvNameHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginCommon"
                app:layout_constraintBottom_toBottomOf="@id/tvNameHero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvNameHero"
                tools:text="El nombre de este señor" />

            <TextView
                android:id="@+id/tvGenderHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/gender"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvNameHero" />

            <TextView
                android:id="@+id/tvGenderHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/marginCommon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvGenderHero"
                tools:text="El nombre de este señor" />

            <TextView
                android:id="@+id/tvRaceHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/race"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvGenderHeroContent" />

            <TextView
                android:id="@+id/tvRaceHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/marginCommon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvRaceHero"
                tools:text="El nombre de este señor" />


            <TextView
                android:id="@+id/tvHeightHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/height"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvRaceHeroContent" />

            <TextView
                android:id="@+id/tvHeightHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/marginCommon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvHeightHero"
                tools:text="El nombre de este señor" />


            <TextView
                android:id="@+id/tvWeightHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/weight"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvHeightHeroContent"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/tvWeightHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/marginCommon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvWeightHero"
                tools:text="El nombre de este señor"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/tvEyeColorHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/eye_color"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvWeightHeroContent"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/tvEyeColorHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginCommon"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvEyeColorHero"
                tools:text="El color de ojos"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/tvHairColorHero"
                style="@style/txtBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCommon"
                android:text="@string/hair_color"
                app:layout_constraintEnd_toEndOf="@id/tvNameHero"
                app:layout_constraintStart_toStartOf="@id/tvNameHero"
                app:layout_constraintTop_toBottomOf="@id/tvEyeColorHeroContent"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/tvHairColorHeroContent"
                style="@style/txtToFillDataOfHero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginCommon"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/glVertical"
                app:layout_constraintTop_toTopOf="@id/tvHairColorHero"
                tools:text="El color de pelo"
                tools:ignore="VisualLintBounds" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>